--- a/pages/login.html
+++ b/pages/login.html
@@ -1,26 +1,34 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Logowanie do aplikacji</title>
     <link href="../styles/login.css" rel="stylesheet">
 </head>
+
 <body>
-<div class="block">
-    <span class="stalks">STalks</span>
-    <span class="logowanie">Logowanie</span>
-    <br>
-    <div>
-        <span class="input_label">Identyfikator</span>
-        <input class="rectangle_wh rectangle" type="text">
-        <span class="input_label">Hasło</span>
-        <input class="rectangle_wh rectangle"  type="text">
-    </div>
-    <br>
-    <button class="zaloguj wh rectangle">Zaloguj się</button>
-</div>
+    <main>
+        <div class="block">
+            <span class="stalks">STalks</span>
+            <span class="logowanie">Logowanie</span>
+
+            <div class="input_fields">
+                <div>
+                    <span class="input_label">Identyfikator</span>
+                    <input class="rectangle_wh rectangle" type="text">
+                </div>
+                <div>
+                    <span class="input_label">Hasło</span>
+                    <input class="rectangle_wh rectangle" type="text">
+                </div>
+            </div>
+            <button class="zaloguj wh rectangle">Zaloguj się</button>
+        </div>
+    </main>
 </body>
+
 </html>
