--- a/pages/settings.html
+++ b/pages/settings.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Konfiguracja</title>
-  <link rel="stylesheet" href="/styles/settings.css">
+  <link rel="stylesheet" href="../styles/settings.css">
 </head>
 
 <body>
   <!-- Навигационная панель слева -->
   <aside class="nav flex-column">
     <div class="chat-icons flex-align flex-column">
-      <img class="nav-icon nav-icon-avatar" src="../images/add_image.png" alt="user_icon">
+      <img class="nav-icon-avatar" src="../images/add_image2.png" alt="user_icon">
 
       <img class="nav-icon" src="../images/chat.png" alt="user_icon">
       <img class="nav-icon" src="../images/new_message.png" alt="user_icon">
