--- a/pages/login.html
+++ b/pages/login.html
@@ -6,27 +6,27 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Logowanie do aplikacji</title>
+    <title>Logowanie</title>
     <link href="../styles/login.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <div class="block">
-            <span class="stalks">STalks</span>
-            <span class="logowanie">Logowanie</span>
+            <span class="label_stalks">STalks</span>
+            <span class="label_login">Logowanie</span>
 
             <div class="input_fields">
                 <div>
                     <span class="input_label">Identyfikator</span>
-                    <input class="rectangle_wh rectangle" type="text">
+                    <input class="input_wh input" type="text">
                 </div>
                 <div>
                     <span class="input_label">Hasło</span>
-                    <input class="rectangle_wh rectangle" type="text">
+                    <input class="input_wh input" type="text">
                 </div>
             </div>
-            <button class="zaloguj wh rectangle">Zaloguj się</button>
+            <button class="button_label button_wh input">Zaloguj się</button>
         </div>
     </main>
 </body>
