--- a/pages/login.html
+++ b/pages/login.html
@@ -6,23 +6,23 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="../styles/main.css" rel="stylesheet">
     <title>Logowanie</title>
-    <link href="../styles/login.css" rel="stylesheet">
 </head>
 
 <body>
-    <main>
+    <main class="login-container">
         <div class="block">
             <span class="label_stalks">STalks</span>
             <span class="label_login">Logowanie</span>
 
             <div class="input_fields">
                 <div>
-                    <span class="input_label">Identyfikator</span>
+                    <label class="input_label">Identyfikator</label>
                     <input class="input_wh input" type="text">
                 </div>
                 <div>
-                    <span class="input_label">Hasło</span>
+                    <label class="input_label">Hasło</label>
                     <input class="input_wh input" type="text">
                 </div>
             </div>
