--- a/pages/settings/password_change.html
+++ b/pages/settings/password_change.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../../styles/main.css">
   <title>Konfiguracja</title>
 </head>
 
 <body>
   <div class="settings-container">
     <!-- Модальное окно смены пароля -->
-    <!--<div class="modal">
+    <div class="modal">
       <div class="modal-content flex-column flex-align">
         <span class="modal-title">Zmiana hasła</span>
         <div class="w100 modal-inputs">
@@ -22,46 +22,35 @@
           </div>
           <div class="flex-column">
             <label class="input_label settings_label">Nowe hasło</label>
-            <input class="input_wh w100input" type="text">
+            <input class="input_wh w100 input" type="text">
           </div>
         </div>
         <div class="w100 modal-btns setting-action-btns flex-align">
-          <button>Anulować</button>
-          <button>Zapisz</button>
+          <button>
+            <a href="settings.html">Anulować</a>
+          </button>
+          <button>
+            <a href="settings.html">Zapisz</a>
+          </button>
         </div>
       </div>
 
       <div class="modal-background"></div>
-    </div>-->
-
-    <!-- Модальное окно изменения цвета приложения/чатов -->
-    <!--<div class="modal">
-      <div class="modal-content flex-column flex-align">
-        <span class="modal-title">Zmiana koloru</span>
-        <div>Color Picker</div>
-
-        <div class="w100 modal-btns setting-action-btns flex-align">
-          <button>Anulować</button>
-          <button>Zapisz</button>
-        </div>
-      </div>
-
-      <div class="modal-background"></div>
-    </div>-->
+    </div>
 
     <!-- Навигационная панель слева -->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
-        <img class="nav-icon-avatar" src="../images/add_image.png" alt="user_icon">
+        <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
 
-        <img class="nav-icon" src="../images/chat.png" alt="user_icon">
-        <img class="nav-icon" src="../images/new_message.png" alt="user_icon">
-        <img class="nav-icon" src="../images/add_group.png" alt="user_icon">
+        <img class="nav-icon cursor-pointer" src="../../images/chat.png" alt="user_icon">
+        <img class="nav-icon cursor-pointer" src="../../images/new_message.png" alt="user_icon">
+        <img class="nav-icon cursor-pointer" src="../../images/add_group.png" alt="user_icon">
       </div>
 
       <div class="other-icons flex-align flex-column">
-        <img class="nav-icon" src="../images/settings.png" alt="user_icon">
-        <img class="nav-icon" src="../images/exit.png" alt="user_icon">
+        <img class="nav-icon cursor-pointer" src="../../images/settings.png" alt="user_icon">
+        <img class="nav-icon cursor-pointer" src="../../images/exit.png" alt="user_icon">
       </div>
     </aside>
 
@@ -70,7 +59,7 @@
       <div class="user-data">
         <section class="user-data-main flex-align">
           <div class="settings_avatar_wrapper">
-            <img class="nav-icon-avatar settings_avatar" src="../images/add_image.png" alt="user_icon">
+            <img class="nav-icon-avatar settings_avatar" src="../../images/add_image.png" alt="user_icon">
           </div>
 
           <div class="h100 flex-column flex-align">
@@ -127,15 +116,15 @@
           <div class="flex-column flex pass-color">
             <div class="flex-align pass-color-item">
               <span class="input_label settings_label">Zmiana hasła</span>
-              <img class="nav-icon" src="../images/unlock.png" alt="user_icon">
+              <img class="nav-icon" src="../../images/unlock.png" alt="user_icon">
             </div>
             <div class="flex-align pass-color-item">
               <span class="input_label settings_label">Zmiana koloru aplikacji</span>
-              <img class="nav-icon" src="../images/rgb_circle.png" alt="user_icon">
+              <img class="nav-icon" src="../../images/rgb_circle.png" alt="user_icon">
             </div>
             <div class="flex-align pass-color-item">
               <span class="input_label settings_label">Zmiana koloru tła czatów</span>
-              <img class="nav-icon" src="../images/rgb_circle.png" alt="user_icon">
+              <img class="nav-icon" src="../../images/rgb_circle.png" alt="user_icon">
             </div>
           </div>
         </section>
