--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="../styles/main.css" rel="stylesheet">
+    <link href="../../styles/main.css" rel="stylesheet">
     <title>Logowanie</title>
 </head>
 
@@ -18,15 +18,17 @@
 
             <div class="input_fields">
                 <div>
-                    <label class="input_label">Identyfikator</label>
+                    <label style="color: #fff" class="input_label">Identyfikator</label>
                     <input class="input_wh input" type="text">
                 </div>
                 <div>
-                    <label class="input_label">Hasło</label>
+                    <label style="color: #fff" class="input_label">Hasło</label>
                     <input class="input_wh input" type="text">
                 </div>
             </div>
-            <button class="button_label button_wh input">Zaloguj się</button>
+            <form action="../chat/personal.html">
+                <input class="button_label button_wh input" type="submit" value="Zaloguj się" />
+            </form>
         </div>
     </main>
 </body>
