--- a/pages/chat/add_chat.html
+++ b/pages/chat/add_chat.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Модальное окно добавление знакомых -->
+    <!-- Модальное окно добавление чата -->
     <div class="modal">
       <div class="modal-content add-chat-modal flex-column flex-align">
         <span class="modal-title">Utwórz czat</span>
