--- a/pages/chat/report.html
+++ b/pages/chat/report.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Модальное окно добавление знакомых -->
+    <!-- Модальное окно на жалобы -->
     <div class="modal">
       <div class="modal-content flex-column flex-align">
         <div class="w100 modal-inputs">
