--- a/pages/chat/report_admin.html
+++ b/pages/chat/report_admin.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Модальное окно добавление знакомых -->
+    <!-- Модальное окно на жалобы админ -->
     <div class="modal">
       <div style="height: auto" class="modal-content flex-column flex-align">
         <div class="report-admin-wrapper">
