--- a/pages/chat/add_chat.html
+++ b/pages/chat/add_chat.html
@@ -1,6 +1,7 @@
+<!--Okno modalne do tworzenia czatu grupowego -->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
   <title>Czaty</title>
 </head>
 
+
 <body>
   <div class="chats-container">
-    <!-- Модальное окно добавление чата -->
+    <!-- Okno modalne dodawanie czatu -->
     <div class="modal">
       <div class="modal-content add-chat-modal flex-column flex-align">
         <span class="modal-title">Utwórz czat</span>
@@ -41,9 +43,12 @@
 
       <div class="modal-background"></div>
     </div>
-    <!------------------------------------------------------------>
 
-    <!-- Навигационная панель слева -->
+
+    <!--  Powtarzanie strony group.html  -->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -64,9 +69,7 @@
     </aside>
 
     <main class="w100 chats-content">
-      <!-- Все чаты -->
       <aside class="chats-all-chats">
-        <!-- Групповые чаты -->
         <div class="chats-group-chats">
           <div class="chats-all-label">
             <span>Czaty grupowe</span>
@@ -90,7 +93,6 @@
           </div>
         </div>
 
-        <!-- Личные чаты -->
         <div class="chats-personal-chats">
           <div class="chats-all-label">
             <span>Prywatne czaty</span>
@@ -123,7 +125,6 @@
         </div>
       </aside>
 
-      <!-- Выбранный чат -->
       <section class="chats-selected-chat flex-column">
         <div class="selected-chat-label chats-chat-selected flex-align">
           <div class="chats-chat">
