--- a/pages/chat/add_person.html
+++ b/pages/chat/add_person.html
@@ -1,6 +1,7 @@
+<!--Okno modalne do dodawania znajomych-->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Модальное окно добавление знакомых -->
+    <!-- Okno modalne do dodawania znajomych -->
     <div class="modal">
       <div class="modal-content chat-modal flex-column flex-align">
         <span class="modal-title">Dodaj znajomego</span>
@@ -37,9 +38,12 @@
 
       <div class="modal-background"></div>
     </div>
-    <!------------------------------------------------------------>
 
-    <!-- Навигационная панель слева -->
+
+    <!--  Powtarzanie strony group.html  -->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -60,9 +64,7 @@
     </aside>
 
     <main class="w100 chats-content">
-      <!-- Все чаты -->
       <aside class="chats-all-chats">
-        <!-- Групповые чаты -->
         <div class="chats-group-chats">
           <div class="chats-all-label">
             <span>Czaty grupowe</span>
@@ -86,7 +88,6 @@
           </div>
         </div>
 
-        <!-- Личные чаты -->
         <div class="chats-personal-chats">
           <div class="chats-all-label">
             <span>Prywatne czaty</span>
@@ -119,7 +120,6 @@
         </div>
       </aside>
 
-      <!-- Выбранный чат -->
       <section class="chats-selected-chat flex-column">
         <div class="selected-chat-label chats-chat-selected flex-align">
           <div class="chats-chat">
