--- a/pages/chat/group.html
+++ b/pages/chat/group.html
@@ -1,6 +1,7 @@
+<!--Strona z czatem grupowym-->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Навигационная панель слева -->
+    <!-- Pasek nawigacyjny po lewej stronie -->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -37,9 +38,9 @@
 
 
     <main class="w100 chats-content">
-      <!-- Все чаты -->
+      <!-- Lista wszystkich czatów -->
       <aside class="chats-all-chats">
-        <!-- Групповые чаты -->
+        <!-- Czaty grupowe -->
         <div class="chats-group-chats">
           <div class="chats-all-label">
             <span>Czaty grupowe</span>
@@ -63,7 +64,7 @@
           </div>
         </div>
 
-        <!-- Личные чаты -->
+        <!-- Prywatne czaty -->
         <div class="chats-personal-chats">
           <div class="chats-all-label">
             <span>Prywatne czaty</span>
@@ -96,7 +97,7 @@
         </div>
       </aside>
 
-      <!-- Выбранный чат -->
+      <!-- Model czatu który został wybrany -->
       <section class="chats-selected-chat flex-column">
         <div class="selected-chat-label chats-chat-selected flex-align">
           <div class="chats-chat">
