--- a/pages/chat/report_admin.html
+++ b/pages/chat/report_admin.html
@@ -1,6 +1,7 @@
+<!-- Модальное окно на жалобы админ -->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,11 +52,12 @@
 
       <div class="modal-background"></div>
     </div>
-    <!------------------------------------------------------------>
 
 
-
-    <!-- Навигационная панель слева -->
+    <!--  Powtarzanie strony group_admin.html  -->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -79,9 +81,7 @@
 
 
     <main class="w100 chats-content">
-      <!-- Все чаты -->
       <aside class="chats-all-chats">
-        <!-- Групповые чаты -->
         <div class="chats-group-chats">
           <div class="chats-all-label">
             <span>Czaty grupowe</span>
@@ -105,7 +105,6 @@
           </div>
         </div>
 
-        <!-- Личные чаты -->
         <div class="chats-personal-chats">
           <div class="chats-all-label">
             <span>Prywatne czaty</span>
@@ -138,7 +137,6 @@
         </div>
       </aside>
 
-      <!-- Выбранный чат -->
       <section class="chats-selected-chat flex-column">
         <div class="selected-chat-label chats-chat-selected flex-align">
           <div class="chats-chat">
@@ -180,7 +178,6 @@
         </div>
       </section>
 
-      <!-- Список пользователей -->
       <section class="chat-users flex-column flex-align">
         <span class="chat-users-label">Jesteś administratorem</span>
 
