--- a/pages/settings/color_change.html
+++ b/pages/settings/color_change.html
@@ -1,6 +1,7 @@
+<!-- Modalne okno zmiany koloru aplikacji / czatów -->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
 <body>
   <div class="settings-container">
-    <!-- Модальное окно изменения цвета приложения/чатов -->
+    <!-- Modalne okno zmiany koloru aplikacji / czatów -->
     <div class="modal">
       <div class="modal-content flex-column flex-align">
         <span class="modal-title">Zmiana koloru</span>
@@ -30,7 +31,11 @@
       <div class="modal-background"></div>
     </div>
 
-    <!-- Навигационная панель слева -->
+
+    <!--  Powtarzanie strony setting.html  -->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -46,7 +51,6 @@
       </div>
     </aside>
 
-    <!-- Контент настроек -->
     <main class="w100 settings-content">
       <div class="user-data">
         <section class="user-data-main flex-align">
@@ -123,7 +127,6 @@
       </div>
     </main>
 
-    <!-- Кнопки -->
     <aside class="setting-action-btns">
       <button>Anulować</button>
       <button>Zapisz</button>
