--- a/pages/chat/report.html
+++ b/pages/chat/report.html
@@ -1,6 +1,7 @@
+<!-- Modalne okno do wysyłania zgłoszenia -->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
 <body>
   <div class="chats-container">
-    <!-- Модальное окно на жалобы -->
+    <!-- Modalne okno do wysyłania zgłoszenia -->
     <div class="modal">
       <div class="modal-content flex-column flex-align">
         <div class="w100 modal-inputs">
@@ -40,11 +41,12 @@
 
       <div class="modal-background"></div>
     </div>
-    <!------------------------------------------------------------>
 
 
-
-    <!-- Навигационная панель слева -->
+    <!--  Powtarzanie strony group.html  -->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
+    <!------------------------------------------------------------------------------->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -69,9 +71,7 @@
     </aside>
 
     <main class="w100 chats-content">
-      <!-- Все чаты -->
       <aside class="chats-all-chats">
-        <!-- Групповые чаты -->
         <div class="chats-group-chats">
           <div class="chats-all-label">
             <span>Czaty grupowe</span>
@@ -95,7 +95,6 @@
           </div>
         </div>
 
-        <!-- Личные чаты -->
         <div class="chats-personal-chats">
           <div class="chats-all-label">
             <span>Prywatne czaty</span>
@@ -128,7 +127,6 @@
         </div>
       </aside>
 
-      <!-- Выбранный чат -->
       <section class="chats-selected-chat flex-column">
         <div class="selected-chat-label chats-chat-selected flex-align">
           <div class="chats-chat">
