--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -1,6 +1,7 @@
+<!-- Strona - Konfiguracja -->
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
 <body>
   <div class="settings-container">
-    <!-- Навигационная панель слева -->
+    <!-- Pasek nawigacyjny po lewej stronie -->
     <aside class="nav flex-column">
       <div class="chat-icons flex-align flex-column">
         <img class="nav-icon-avatar cursor-pointer" src="../../images/add_image.png" alt="user_icon">
@@ -31,7 +32,7 @@
       </div>
     </aside>
 
-    <!-- Контент настроек -->
+    <!-- Zawartość ustawień -->
     <main class="w100 settings-content">
       <div class="user-data">
         <section class="user-data-main flex-align">
@@ -114,7 +115,7 @@
       </div>
     </main>
 
-    <!-- Кнопки -->
+    <!-- Przyciski -->
     <aside class="setting-action-btns">
       <button>Anulować</button>
       <button>Zapisz</button>
